[gd_scene load_steps=8 format=3 uid="uid://c53e5ffabqvci"]

[ext_resource type="Script" uid="uid://bf8tgk53pdptr" path="res://scenes/characters/jumper_enemy.gd" id="1_3sin1"]
[ext_resource type="Texture2D" uid="uid://duc0bvo61ljvv" path="res://assets/sprites/slime.svg" id="2_8846s"]
[ext_resource type="PackedScene" uid="uid://22o5hm5rorw8" path="res://scenes/components/hitbox_component.tscn" id="3_6vmuo"]
[ext_resource type="PackedScene" uid="uid://gxc4hcrljhcm" path="res://scenes/components/health_component.tscn" id="4_242sf"]
[ext_resource type="AnimationLibrary" uid="uid://bo5gtqkkhod47" path="res://scenes/characters/slime_enemy_anims.tres" id="5_m58gs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgdpr"]
size = Vector2(44, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pnp1"]
size = Vector2(56, 56)

[node name="JumperVirus" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(363, 235)
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967292
script = ExtResource("1_3sin1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.06, 0.057)
texture = ExtResource("2_8846s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mgdpr")

[node name="EnemyHitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_6vmuo")]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 3
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitboxComponent"]
shape = SubResource("RectangleShape2D_8pnp1")

[node name="HealthComponent" parent="." instance=ExtResource("4_242sf")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": ExtResource("5_m58gs")
}
autoplay = "follow-x"
speed_scale = 2.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_exited" from="EnemyHitboxComponent" to="." method="_on_enemy_hitbox_component_area_exited"]
